[project]
name = "backend"
version = "0.1.0"
description = "backend for deadline api"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.3.0",
    "email-validator>=2.2.0",
    "fastapi>=0.116.1",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "black",
    "ruff"
]
